@@ -1,0 +1,6 @@
+(* define the annotation type that gets inserted 
+ * into every node of the ocaml ast
+ *)
+
+type annotated = int
+
